--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/papaparse": "^5.0.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-rangeslider": "^2.2.1",
     "@types/recharts": "^1.8.9",
     "@types/styled-components": "^5.0.1",
     "papaparse": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-force-graph-2d": "^1.15.1",
+    "react-rangeslider": "^2.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
