--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/react-rangeslider": "^2.2.1",
     "@types/recharts": "^1.8.9",
     "@types/styled-components": "^5.0.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "papaparse": "^5.2.0",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-force-graph-2d": "^1.15.1",
@@ -27,7 +30,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
