--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/recharts": "^1.8.9",
     "@types/styled-components": "^5.0.1",
+    "d3-scale": "^3.1.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "papaparse": "^5.2.0",
@@ -20,6 +21,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-simple-maps": "^2.0.0",
+    "react-tooltip": "^4.2.6",
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
