--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tool",
-  "version": "0.1.0",
+  "name": "uni_helsinki_awards",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
